--- a/workflows/release.yml
+++ b/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-publish:
     runs-on: windows-latest
     env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout code
