--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,11 @@ name: Build & Release ScrapeWeb
 on:
   push:
     tags:
-      - 'v2.1.1'
+      - 'v*.*.*'
 
 # Make your PAT available to electron-builder
 env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build-and-publish:
