--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ on:
 # Make your PAT available to electron-builder
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  EP_DRAFT: false    # <-- disable draft mode
 
 jobs:
   build-and-publish:
