--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ScrapeWeb",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "author": "Garrett Spear",
   "description": "Graphical web scraper for blogs, built with Electron and Puppeteer",
   "main": "src/main.js",
@@ -27,11 +27,17 @@
       "target": [
         {
           "target": "portable",
-          "arch": ["x64","ia32"]
+          "arch": [
+            "x64",
+            "ia32"
+          ]
         },
         {
           "target": "zip",
-          "arch": ["x64","ia32"]
+          "arch": [
+            "x64",
+            "ia32"
+          ]
         }
       ],
       "icon": "scrapewebicon.ico",
@@ -49,12 +55,11 @@
   },
   "dependencies": {
     "puppeteer": "^22.8.2",
-    "electron-updater": "^6.6.2"
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "electron": "^25.9.8",
     "electron-builder": "^24.13.3",
     "windows-shortcuts": "^0.1.6"
-    
   }
 }
